# atomic_bomberman

./: -c2  .gitignore  Cargo.toml  README.org  flake.nix  shell.nix
.cargo/: config.toml
assets/: data
nix/: sources.json
src/: animated_sprite.rs  asset_loaders.rs  assets.rs  bomb.rs  flame.rs  game.rs  grid.rs  lib.rs  loading.rs  main.rs  player.rs  state.rs  window.rs
src/animation/: animated_sprite.rs  asset_loader.rs  mod.rs
src/asset_loaders/: animation.rs  animation_list.rs  color_palette.rs  color_remap_table.rs  pcx_image.rs  raw_sound.rs  scheme.rs
src/assets/: ani.rs  pcx.rs  rss.rs
