[package]
name = "atomic_bomberman"
version = "0.1.0"
authors = ["Jos van Bakel <jos@codeaddict.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", rev = "a880b5450829411b0248e47cc066915234371d86", features = ["wav"] }
anyhow = "1.0"
byteorder = "1"
