[package]
name = "atomic_bomberman"
version = "0.1.0"
authors = ["Jos van Bakel <jos@codeaddict.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.5", features = ["wav"] }
anyhow = "1.0"
byteorder = "1"
